--- a/pitch.html
+++ b/pitch.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-<meta name="viewport" content="maximum-scale=1.0">
 <head>
   <title>Pitch</title>
   <script src="https://cdn.jsdelivr.net/npm/mathjax@3.2.2/es5/tex-mml-chtml.min.js"></script>
@@ -72,7 +71,7 @@ endin
 <body>
   <div id="equation"></div>
   <div class="button-row">
-    <button id="add13" class="square-button" style="background-color: lightskyblue;" onclick="processInput({key: 'q'})"></button>
+    <button id="add13" class="square-button" style="background-color: lightskyblue;" onclick="processInput({key: '1'})"></button>
     <button id="add11" class="square-button" style="background-color: khaki;" onclick="processInput({key: 'a'})"></button>
     <button id="add7" class="square-button" style="background-color: plum;" onclick="processInput({key: 's'})"></button>
     <button id="add5" class="square-button" style="background-color: lightgreen;" onclick="processInput({key: 'd'})"></button>
@@ -80,12 +79,12 @@ endin
     <button id="add2" class="square-button" style="background-color: lightgrey;" onclick="processInput({key: 'g'})"></button>
   </div>
   <div class="button-row">
-    <button id="sub13" class="square-button" style="background-color: lightskyblue; visibility: hidden;" onclick="processInput({key: 'p'})"></button>
-    <button id="sub11" class="square-button" style="background-color: khaki; visibility: hidden;" onclick="processInput({key: ';'})"></button>
-    <button id="sub7" class="square-button" style="background-color: plum; visibility: hidden;" onclick="processInput({key: 'l'})"></button>
-    <button id="sub5" class="square-button" style="background-color: lightgreen; visibility: hidden;" onclick="processInput({key: 'k'})"></button>
-    <button id="sub3" class="square-button" style="background-color: hsl(340, 80%, 80%); visibility: hidden;" onclick="processInput({key: 'j'})"></button>
-    <button id="sub2" class="square-button" style="background-color: lightgrey;" onclick="processInput({key: 'h'})"></button>
+    <button id="sub13" class="square-button" style="background-color: lightskyblue; visibility: hidden;" onclick="processInput({key: 'q'})"></button>
+    <button id="sub11" class="square-button" style="background-color: khaki; visibility: hidden;" onclick="processInput({key: 'z'})"></button>
+    <button id="sub7" class="square-button" style="background-color: plum; visibility: hidden;" onclick="processInput({key: 'x'})"></button>
+    <button id="sub5" class="square-button" style="background-color: lightgreen; visibility: hidden;" onclick="processInput({key: 'c'})"></button>
+    <button id="sub3" class="square-button" style="background-color: hsl(340, 80%, 80%); visibility: hidden;" onclick="processInput({key: 'v'})"></button>
+    <button id="sub2" class="square-button" style="background-color: lightgrey;" onclick="processInput({key: 'b'})"></button>
   </div>
   <script>
     let freq = initFreq;
@@ -153,7 +152,7 @@ endin
         freq *= 2.0/1.0;
         ctr2 += 1;
       }
-      else if (event.key == "h") {
+      else if (event.key == "b") {
         freq *= 1.0/2.0;
         ctr2 -= 1;
       }
@@ -161,7 +160,7 @@ endin
         freq *= 3.0/2.0;
         ctr3 += 1; ctr2 -=1 ;
       }
-      else if (event.key == "j") {
+      else if (event.key == "v") {
         freq *= 2.0/3.0;
         ctr3 -= 1; ctr2 += 1;
       }
@@ -169,7 +168,7 @@ endin
         freq *= 5.0/4.0;
         ctr5 += 1; ctr2 -= 2;
       }
-      else if (event.key == "k") {
+      else if (event.key == "c") {
         freq *= 4.0/5.0;
         ctr5 -= 1; ctr2 += 2;
       }
@@ -177,7 +176,7 @@ endin
         freq *= 7.0/4.0;
         ctr7 += 1; ctr2 -= 2;
       }
-      else if (event.key == "l") {
+      else if (event.key == "x") {
         freq *= 4.0/7.0;
         ctr7 -= 1; ctr2 += 2;
       }
@@ -185,15 +184,15 @@ endin
         freq *= 11.0/8.0;
         ctr11 += 1; ctr2 -= 3;
       }
-      else if (event.key == ";") {
+      else if (event.key == "z") {
         freq *= 8.0/11.0;
         ctr11 -= 1; ctr2 += 3;
       }
-      else if (event.key == "q") {
+      else if (event.key == "1") {
         freq *= 13.0/8.0;
         ctr13 += 1; ctr2 -= 3;
       }
-      else if (event.key == "p") {
+      else if (event.key == "q") {
         freq *= 8.0/13.0;
         ctr13 -= 1; ctr2 += 3;
       }
